# spot_grain_poc

./: Cargo.toml  build.rs
proto/: auth.proto  kex.proto
src/: main.rs
